ISSUE-7 clean up endpoints to PlantCompanion
define openApi and changes after, new Mapper